# ons-energy-viz

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py
app/api/: routes.py
app/data/: __init__.py  aws_manager.py  example_usage.py  processor.py  processor_new.py
config/: secure.py  settings.py
examples/: data_processor_example.py  list_csv_files.py
