[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ons-energy-viz"
version = "0.1.0"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"},
]
description = "Visualizador web interativo para dados de geração de energia do Brasil"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"